--- a/app.json
+++ b/app.json
@@ -1,50 +1,51 @@
 {
   "pages": [
+    "pages/item/item",
     "pages/index/index",
     "pages/demo/demo",
     "pages/logs/logs",
     "pages/common/test/test",
     "pages/mine/mine",
-    "pages/item/item",
     "pages/book/book"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#f00",
+    "navigationBarBackgroundColor": "#ff461f",
     "navigationBarTitleText": "WeChatfdgd",
     "navigationBarTextStyle": "white"
   },
   "sitemapLocation": "sitemap.json",
   "tabBar": {
     "color": "#707070",
-    "selectedColor": "#1296db",
+    "selectedColor": "#ff461f",
     "backgroundColor": "#f2f2f2",
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "static/images/tabbarIcon/home.png",
-        "selectedIconPath": "static/images/tabbarIcon/homeSe.png",
+        "iconPath": "static/images/icons/home.png",
+        "selectedIconPath": "static/images/icons/homeRed.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/item/item",
-        "iconPath": "static/images/tabbarIcon/active.png",
-        "selectedIconPath": "static/images/tabbarIcon/activeSe.png",
-        "text": "项目"
+        "iconPath": "static/images/icons/active.png",
+        "selectedIconPath": "static/images/icons/activeRed.png",
+        "text": "动态"
       },
       {
         "pagePath": "pages/book/book",
-        "iconPath": "static/images/tabbarIcon/book.png",
-        "selectedIconPath": "static/images/tabbarIcon/bookSe.png",
+        "iconPath": "static/images/icons/book.png",
+        "selectedIconPath": "static/images/icons/bookRed.png",
         "text": "预约"
       },
       {
         "pagePath": "pages/mine/mine",
-        "iconPath": "static/images/tabbarIcon/mine2.png",
-        "selectedIconPath": "static/images/tabbarIcon/mineSe2.png",
+        "iconPath": "static/images/icons/mine2.png",
+        "selectedIconPath": "static/images/icons/mineRed.png",
         "text": "我的"
       }
     ]
-  }
+  },
+  "debug": false
   
 }
